--- a/paths.cfg
+++ b/paths.cfg
@@ -1,4 +1,12 @@
 # paths.cfg - config file for newprogram
+
+# Name the dir under your $HOME where you want new programs to be made.
 progdir=Documents/Programs
+
+# Name the dir under 'progdir' where boilerplate code that is to be
+# copied into the new program dir.
 stubdir=Srclib/Stubs
+
+# Name the dir under 'progdir' where library source code exists that is
+# to be linked into the new program dir.
 compdir=Srclib/Components
