Program now generates options processing and the main C program. After running autotools the target program will build and can be run using --help option.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,15 +6,14 @@ AM_CFLAGS=-Wall -Wextra -g -O0 -D_GNU_SOURCE=1
 
 bin_PROGRAMS=newprogram
 
-newprogram_SOURCES=newprogram.c dirs.c dirs.h files.c files.h str.c \
-str.h firstrun.c firstrun.h gopt.h gopt.c
+newprogram_SOURCES=newprogram.c dirs.c dirs.h files.c files.h str.c str.h firstrun.h firstrun.c gopt.h gopt.c
 
 man_MANS=newprogram.1
 
 # next lines to be hand edited
 # send <whatever> to $(prefix)/share/
 newdir=$(datadir)/newprogram
-new_DATA=paths.cfg am.mak
-# Ensure that newprogram.1 and any other config files get put in the
-# tarball. Also stops `make distcheck` bringing an error.
-EXTRA_DIST=newprogram.1 paths.cfg am.mak
+new_DATA=
+# ensure that newprogram.1 and any other config files get put in the tarball.
+# also stops `make distcheck` bringing an error.
+EXTRA_DIST=newprogram.1
