Added extra data to config file and renamed it better.

--- a/prdata.cfg
+++ b/prdata.cfg
@@ -1,4 +1,4 @@
-# paths.cfg - config file for newprogram
+# prdata.cfg - config file for newprogram
 
 # Name the dir under your $HOME where you want new programs to be made.
 progdir=Documents/Programs
@@ -10,3 +10,9 @@ stubdir=Srclib/Stubs
 # Name the dir under 'progdir' where library source code exists that is
 # to be hard linked into the new program dir.
 compdir=Srclib/Components
+
+# Program author name
+author=newprogram
+
+# email address
+email=newprogram@np.com
