--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ AM_CFLAGS=-Wall -Wextra -g -O0 -D_GNU_SOURCE=1
 
 bin_PROGRAMS=newprogram
 
-newprogram_SOURCES=newprogram.c dirs.c dirs.h files.c files.h str.c str.h firstrun.h firstrun.c gopt.h gopt.c
+newprogram_SOURCES=newprogram.c dirs.c dirs.h files.c files.h str.c \
+str.h firstrun.h firstrun.c gopt.h gopt.c
 
 man_MANS=newprogram.1
 
@@ -14,6 +15,6 @@ man_MANS=newprogram.1
 # send <whatever> to $(prefix)/share/
 newdir=$(datadir)/newprogram
 new_DATA=am.mak prdata.cfg goptC goptH mainC manpage.md
-# ensure that newprogram.1 and any other config files get put in the tarball.
-# also stops `make distcheck` bringing an error.
+# ensure that newprogram.1 and any other config files get put in the
+# tarball. Also stops `make distcheck` bringing an error.
 EXTRA_DIST=newprogram.1 am.mak prdata.cfg goptC goptH mainC manpage.md
